@@ -15,22 +15,11 @@ include $(CGAL_MAKEFILE)
 
 CXXFLAGS = \
            -I../../include \
-	   -I./include \
            $(TESTSUITE_CXXFLAGS) \
+           $(EXTRA_FLAGS) \
            $(CGAL_CXXFLAGS) \
-	   -W -Wall \
-           -DCGAL_CHECK_EXPENSIVE 
-
-	 #  -g
-
-	# -DCGAL_NO_DEPRECATED_CODE \
-
-	# -fprofile-arcs -ftest-coverage # pour Gcov
-	# -Wold-style-cast
-	# -pedantic
-	# -DCGAL_CHECK_EXPENSIVE \
-	# -DCGAL_CHECK_EXACTNESS \
-
+           -Iinclude \
+           $(LONG_NAME_PROBLEM_CXXFLAGS)
 
 #---------------------------------------------------------------------#
 #                    linker flags
@@ -54,6 +43,7 @@ all:            \
                 test_delaunay_3_old_remove$(EXE_EXT) \
                 test_delaunay_hierarchy_3$(EXE_EXT) \
                 test_regular_3$(EXE_EXT) \
+                test_regular_traits_3$(EXE_EXT) \
                 test_triangulation_3$(EXE_EXT) \
                 test_triangulation_tds$(EXE_EXT) 
 
@@ -69,6 +59,9 @@ test_delaunay_hierarchy_3$(EXE_EXT): test_delaunay_hierarchy_3$(OBJ_EXT)
 test_regular_3$(EXE_EXT): test_regular_3$(OBJ_EXT)
 	$(CGAL_CXX) $(LIBPATH) $(EXE_OPT)test_regular_3 test_regular_3$(OBJ_EXT) $(LDFLAGS)
 
+test_regular_traits_3$(EXE_EXT): test_regular_traits_3$(OBJ_EXT)
+	$(CGAL_CXX) $(LIBPATH) $(EXE_OPT)test_regular_traits_3 test_regular_traits_3$(OBJ_EXT) $(LDFLAGS)
+
 test_triangulation_3$(EXE_EXT): test_triangulation_3$(OBJ_EXT)
 	$(CGAL_CXX) $(LIBPATH) $(EXE_OPT)test_triangulation_3 test_triangulation_3$(OBJ_EXT) $(LDFLAGS)
 
@@ -80,6 +73,7 @@ clean: \
                    test_delaunay_3_old_remove.clean \
                    test_delaunay_hierarchy_3.clean \
                    test_regular_3.clean \
+                   test_regular_traits_3.clean \
                    test_triangulation_3.clean \
                    test_triangulation_tds.clean 
 
